--- a/src/main.css
+++ b/src/main.css
@@ -1,28 +1,32 @@
 body {
-    margin: 0;
-    background-color: #444;
+  margin: 0;
+  background-color: #444;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 .profile {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    flex-flow: column;
+  display: flex;
+  -ms-align-items: center;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  flex-flow: column;
 }
 
 img {
-    -webkit-border-radius: 100%;
-    -moz-border-radius: 100%;
-    border-radius: 100%;
-    width: 300px;
-    box-shadow: 0 0 20px black;
+  border-radius: 100%;
+  border: 5px;
+  width: 300px;
+  box-shadow: 0 0 20px black;
 }
 
 h1 {
-    color: white;
-    font-size: 5em;
-    font-family: sans-serif;
-    text-shadow: 0 0 20px black;
+  font-size: 5em;
+  font-family: sans-serif;
+  color: white;
+  text-shadow: 0 0 20px black;
+  text-align: center;
 }
-
