--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   background-color: #444;
+  font-family: Helvetica;
 }
 
 * {
@@ -16,17 +17,23 @@ body {
   flex-flow: column;
 }
 
-img {
+.profile > img {
   border-radius: 100%;
   border: 5px;
   width: 300px;
   box-shadow: 0 0 20px black;
 }
 
-h1 {
+.profile > h1 {
   font-size: 5em;
   font-family: sans-serif;
   color: white;
   text-shadow: 0 0 20px black;
   text-align: center;
+}
+
+.content {
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 20px;
 }
